--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+ *{
+   background-color: black;
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+ }
+ .input{
+  margin-bottom:5px;
+  margin:10px;
+  outline: none;
   color: white;
+  font-size:large;
+}
+.formspace{
+  display:grid;
+  color: white;
+  padding:20px;
+  margin:10px;
+  margin-top:10%;
+  
+}
+h1{
+  text-align: center;
+  
+}
+.input{
+  padding:10px;
+  border:none;
+  border-bottom:1px solid gray;
 }
 
-.App-link {
-  color: #61dafb;
+
+.btn{
+  margin-top: 20px;
+  background-color: grey;
+  color: white;
+  position: relative;
+  padding:10px;
+  border-radius: 5px;
+  border:none;
+  cursor: pointer;
+  width: 40%;
+  left: 30%;
+  font-size:large;
+  
+}
+.success{
+  color:green;
+  padding:10px;
+}
+.error{
+  color:red;
+  padding:10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
